k8s/container-builder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-container
spec:
  containers:
    - name: kubectl
      image: joshendriks/alpine-k8s
      command:
        - /bin/cat
      tty: true
    - name: kaniko
      image: gcr.io/kaniko-project/executor:debug
      command:
        - /busybox/cat
      tty: true
      volumeMounts:
        - name: jenkins-docker-cfg
          mountPath: /kaniko/.docker
#    - name: maven
#      image: maven:3.6.3-jdk-8
#      command:
#        - sleep
#      args:
#        - infinity
#      volumeMounts:
#        - name: jenkins-maven
#          mountPath: /root/.m2
    - name: gradle
      image: gradle:jdk8
      command:
        - sleep
      args:
        - infinity
      volumeMounts:
        - name: jenkins-gradle
          mountPath: /home/gradle/.gradle
  volumes:
    - name: jenkins-docker-cfg
      projected:
        sources:
          - secret:
              name: docker-credentials
              items:
                - key: .dockerconfigjson
                  path: config.json
#    - name: jenkins-maven
#      persistentVolumeClaim:
#        claimName: "jenkins-maven"
    - name: jenkins-gradle
      persistentVolumeClaim:
        claimName: "jenkins-gradle"
