k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-argo-ingress
  namespace: hello-argo
    #  annotations:
    #kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "hello-argo.inganyoyo.kr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-argo-service
                port:
                  number: 8080
